--- a/styles/Countries.module.css
+++ b/styles/Countries.module.css
@@ -17,6 +17,10 @@
   font-weight: 500;
   letter-spacing: 1.2px;
   color: var(--text-secondary);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 18px;
 }
 
 .container {
@@ -41,6 +45,10 @@
 .row:hover {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   transform: translateY(-4px);
+}
+
+.arrow {
+  color: var(--bar-secondary);
 }
 
 /* COUNTRY */
