--- a/styles/Country.module.css
+++ b/styles/Country.module.css
@@ -5,6 +5,7 @@
   height: 728px;
 }
 
+/* LEFT */
 .leftContent {
   flex: 0.6;
   height: 480px;
@@ -16,13 +17,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-}
-
-.rightContent {
-  flex: 2;
-  border-radius: 12px;
-  background-color: var(--bg-white);
-  box-shadow: var(--box-shadow);
 }
 
 .flag {
@@ -60,9 +54,54 @@
   font-weight: 500;
   color: var(--text-secondary);
 }
+/* RIGHT */
+.rightContent {
+  flex: 2;
+  border-radius: 12px;
+  background-color: var(--bg-white);
+  box-shadow: var(--box-shadow);
+  padding: 30px 0;
+}
 
 .detail {
   font-size: 18px;
   font-weight: 500;
-  color: var(--text-black);
+  color: var(--text-333);
+  margin-left: 50px;
+  margin-bottom: 24px;
+}
+
+.content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid var(--border-clr);
+  padding: 0 50px;
+  height: 72px;
+  text-transform: capitalize;
+}
+
+.title {
+  font-size: 14px;
+  font-weight: 500;
+  color: var(--text-secondary);
+}
+
+.text {
+  font-size: 14px;
+  font-weight: 500;
+  color: var(--text-dark);
+}
+
+.gini {
+  margin-right: -48px;
+}
+
+.last_content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 50px;
+  margin-top: 46px;
+  text-transform: capitalize;
 }
