--- a/styles/Country.module.css
+++ b/styles/Country.module.css
@@ -99,9 +99,36 @@
 
 .last_content {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   padding: 0 50px;
   margin-top: 46px;
   text-transform: capitalize;
+}
+
+/* BORDERS */
+.borders {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 28px;
+}
+
+.border_item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+  margin-top: 24px;
+}
+
+.border_name {
+  font-size: 12px;
+  font-weight: 400;
+  color: var(--text-dark);
+}
+
+.border_flag {
+  width: 78px;
+  height: 58px;
+  border-radius: 4px;
 }
