--- a/styles/Search.module.css
+++ b/styles/Search.module.css
@@ -1,3 +1,9 @@
+.section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .wrapper {
   width: 570px;
   height: 52px;
@@ -29,13 +35,29 @@
   font-size: 1.4rem;
 }
 
-.section {
-  display: flex;
-  justify-content: space-between;
-}
-
 .found {
   color: var(--text-primary);
   font-size: 16px;
   font-weight: 500;
+}
+
+@media (max-width: 1000px) {
+  .section {
+    flex-direction: column;
+  }
+
+  .found {
+    align-self: flex-start;
+    margin-left: 50px;
+  }
+
+  .wrapper {
+    width: 600px;
+  }
+}
+
+@media (max-width: 775px) {
+  .wrapper {
+    width: 400px;
+  }
 }
